--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build:prod": "cross-env NODE_ENV=production webpack --progress -hide-modules",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-module mode=production",
     "test": "jest"
   },
   "dependencies": {
@@ -29,9 +26,13 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-jest": "^3.0.5",
-    "vue-template-compiler": "^2.6.10"
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
+    "webpack-cli": "^3.3.9"
   },
   "eslintConfig": {
     "root": true,
